# gripo

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  project.md  pyproject.toml  quasar.config.ts  vitest.config.ts
.claude/agents/: textual-code-reviewer.md
docs/plans/: 2026-02-26-gripo-design.md  2026-02-26-gripo-implementation.md  2026-02-26-missing-features-design.md  2026-02-26-missing-features-plan.md  2026-03-02-sqlite-backup-sync-design.md  2026-03-02-sqlite-backup-sync-plan.md
src/: electron-api.d.ts
src-electron/: electron-main.ts  electron-preload.ts  sqlite-service.ts
src/__tests__/: setup.ts
src/components/: AgendaDetail.vue  AgendaList.vue  CommandPalette.vue  DashboardSection.vue  ExampleComponent.vue  MinutesDetail.vue  MinutesList.vue  TaskDetail.vue  TaskList.vue  TiptapEditor.vue  models.ts
src/composables/: useCommandPalette.ts  useKeyboardNav.ts  useListNavigation.ts  useUndoAction.ts
src/css/: app.scss
src/db/: database.ts
src/layouts/: MainLayout.vue
src/models/: types.ts
src/pages/: DashboardPage.vue  IndexPage.vue  SettingsPage.vue  SubjectPage.vue
src/router/: routes.ts
src/stores/: agenda-store.ts  minutes-store.ts  subject-store.ts  task-store.ts
tests/: conftest.py  test_date_input.py  test_db_follow_ups.py  test_db_notes.py  test_db_open_points.py  test_db_search.py  test_db_subjects.py  test_db_tasks.py  test_db_week_rollover.py
tracker/: __main__.py  app.py  constants.py  db.py  messages.py  models.py  tracker.tcss
tracker/screens/: add_note.py  (+12 more)
(+36 files in other folders)
